# IDF_ESP32_Blink

./: .gitignore  .gitmodules  CMakeLists.txt  IDF_Arduino_Version_Compatibility.txt  LICENSE  README.md  partition_table_explanation.xlsx  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
data/: example_file.txt
main/: CMakeLists.txt  main.cpp  sketch.cpp
